--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+#yt-study-buddy-stats {
+  padding: 1rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
 .durationAt1_5x,
 .durationAt2x,
 .duration {
