--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,85 @@
   padding: 1rem;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 1rem;
+  gap: 1rem;
   display: flex;
   flex-direction: column;
 }
 
-.durationAt1_5x,
-.durationAt2x,
+.durationSelector {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 .duration {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
+  font-size: 2rem;
+  font-weight: 900;
+  background-image: linear-gradient(90deg, rgba(37, 255, 4, 1) 0%, rgba(228, 255, 186, 1) 100%);
+  background-clip: text;
+  color: transparent;
 }
 
-.durationTable {
-  border-collapse: collapse;
-}
-
-.durationTable td {
-  padding: 0.5rem;
+#durationSelect {
+  outline: none;
+  user-select: none;
   border: 1px solid;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.videosCounted {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.videosCounted span {
+  font-size: 2rem;
+  font-weight: 900;
+  background-image: linear-gradient(90deg, #f1c40f 0%, rgba(255,252,186,1) 100%);
+  background-clip: text;
+  color: transparent;
+}
+
+.videosNotCounted {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.videosNotCounted span {
+  font-size: 2rem;
+  font-weight: 900;
+  background-image: linear-gradient(90deg, #ff6d5d 0%, #ff8c7f 100%);
+  background-clip: text;
+  color: transparent;
+}
+
+.scroll-msg {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: #98e6fa;
+  margin-top: 2rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.scroll-msg:hover {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.scroll-msg svg {
+  height: 2rem;
 }
